# ccpp-nuopc-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ccpp_prebuild_config.py  patch_dependencies.py  suite_dummy.xml
.github/workflows/: ci.yml
cmake/: FindESMF.cmake
src/: ccpp_data_mod.F90  ccpp_driver_mod.F90  ccpp_inline_cdeps_mod.F90  ccpp_internal_state.F90  ccpp_nuopc_cap.F90  my_physics_suite.xml  sample_scheme.F90  test_ccpp_driver.F90
